--- a/src/views/pages/main.pug
+++ b/src/views/pages/main.pug
@@ -12,7 +12,7 @@ block content
               .main-page__media-icon 
                 +big-arrow-svg.main-page__media-svg
             .main-page__media-content 
-              .main-page__media-title 
+              a.main-page__media-title(href="#") 
                 |Каталог продукции
               .main-page__media-text 
                 |Станки с ЧПУ, ленточнопильные станки, шлифовальные станки, гидравлические прессы и прочее оборудование
@@ -23,7 +23,7 @@ block content
               .main-page__media-icon 
                 +big-arrow-svg.main-page__media-svg
             .main-page__media-content 
-              .main-page__media-title
+              a.main-page__media-title(href="#") 
                 |Интернет-магазин
               .main-page__media-text 
                 |Режущий инструмент, вспомогательный инструмент, аксессуары для инструмента и приспособления
