--- a/src/views/pages/profile.pug
+++ b/src/views/pages/profile.pug
@@ -5,6 +5,9 @@ include ../components/tabs
 include ../components/accordion
 include ../components/model-tabs
 
+block header 
+  +header(login = true)
+
 block content 
   - 
     var ddata = [
