--- a/src/assets/styles/pages/booking-page.scss
+++ b/src/assets/styles/pages/booking-page.scss
@@ -271,4 +271,35 @@
     }
     font-weight: 500;
   }
+
+  &__list {
+    @media (max-width: ($breakpoint - 1px)) {
+      --gap: 20px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      row-gap: var(--gap);
+      column-gap: var(--gap);
+    }
+  }
+  &__list-item {
+
+    &:last-child {
+      @media (max-width: ($breakpoint - 1px)) {
+        grid-column: span 2;
+      }
+    }
+    &:not(:first-child) {
+      margin-top: 9px;
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 0;
+      }
+    }
+  }
+  &__list-text {
+    @media (max-width: $breakpoint) {
+      margin-bottom: 2px;
+      @include fsl(12px, 120%);
+    }
+    @include fsl(14px, 120%);
+  }
 }
