--- a/src/assets/styles/pages/main-page.scss
+++ b/src/assets/styles/pages/main-page.scss
@@ -102,6 +102,7 @@
   }
   &__media-title {
     margin-bottom: 8px;
+    display: block;
     @include fsl(40px, 100%);
     @media (max-width: ($breakpoint - 1px)) {
       margin-bottom: 4px;
