--- a/src/views/components/aside.pug
+++ b/src/views/components/aside.pug
@@ -1,5 +1,5 @@
 mixin aside 
-  .aside 
+  form.aside.form(action='/')
     -
       var ddata = [
         {
@@ -123,6 +123,36 @@ mixin aside
                     |Показать еще
                   .button-show__icon 
                     +arrow-svg.button-show__svg
+        .aside__card 
+          .aside__container(data-accordion='') 
+            h5.aside__title 
+              |Тип фрезы, радиокнопки
+            ul.aside__list.aside__inner
+              each el, index in ['Острая кромка', 'Фаска 45°', 'Фаска 45° + радиус']
+                li.aside__item 
+                  .radio 
+                    label.radio__label
+                      input.radio__input(type="radio" name='group1' checked=(index === 0))
+                      .radio__circle
+                        +circle-svg.radio__svg
+                      .radio__text 
+                        |#{el}
+            .aside__dropdown(data-accordion-dropdown='')
+              - for (i = 0; i < 2; i++)
+                .aside__item 
+                  .radio 
+                    label.radio__label
+                      input.radio__input(type="radio" name='group1')
+                      .radio__circle
+                        +circle-svg.radio__svg
+                      .radio__text 
+                        |Острая кромка
+            .aside__button.aside__inner(data-button-show='' data-accordion-button='')
+              .button-show
+                .button-show__text 
+                  |Показать еще
+                .button-show__icon 
+                  +arrow-svg.button-show__svg
         if (attributes.range)
           - for (x = 0; x < 2; x++)
             .aside__card(data-range-block='')
@@ -143,6 +173,12 @@ mixin aside
                             |до
                           input.range__input(type="number" data-input-end='')
                   .range__range
+          .aside__card
+            .aside__container 
+              h5.aside__title 
+                |Численное значение, мм
+              .aside__inner
+                input.form__input.form__input--sm(type="text" value='2000')
       if (attributes.clear)
         .aside__btn
           .clear-button(data-clear-button='')
