--- a/src/views/components/svg.pug
+++ b/src/views/components/svg.pug
@@ -386,3 +386,7 @@ mixin call-svg
     path(d='M4.15576 1.93005H8.93692C8.94381 4.84422 9.68097 7.58615 10.9761 9.98362L7.42817 13.504C9.10915 16.2184 11.3757 18.5401 14.0419 20.2969L17.583 16.7489C20.0011 18.1268 22.7844 18.9397 25.7468 18.9879L25.7881 19.0292V23.8793' stroke='#121212' stroke-width='1.5' stroke-miterlimit='10')
     path(d='M16.4116 5.09216C17.9755 5.39529 19.4705 6.15311 20.6761 7.36563C21.799 8.48858 22.5362 9.85955 22.8738 11.2994' stroke='#121212' stroke-width='1.5' stroke-miterlimit='10')
     path(d='M17.0381 1C19.4424 1.43402 21.7435 2.57765 23.6036 4.43775C25.4086 6.24274 26.5453 8.46798 27 10.8034' stroke='#121212' stroke-width='1.5' stroke-miterlimit='10')
+
+mixin circle-svg 
+  svg(class=attributes.class width='8' height='8' viewbox='0 0 8 8' fill='none' xmlns='http://www.w3.org/2000/svg')
+    rect(width='8' height='8' rx='4' fill='#2447ED')
