--- a/src/views/pages/contacts.pug
+++ b/src/views/pages/contacts.pug
@@ -169,7 +169,7 @@ block content
               .contacts-page__img 
                 img.desktop(src="assets/images/contacts-2.jpg", alt="")
                 img.mobile(src="assets/images/contacts-1-mobile.jpg", alt="")
-          .contacts-page__grid-item
+          .contacts-page__grid-item.contacts-page__grid-item--block
             h3.contacts-page__title
               |Пермь
             .contacts-page__grid-row 
