--- a/src/views/pages/publications-article.pug
+++ b/src/views/pages/publications-article.pug
@@ -71,7 +71,7 @@ block content
                 .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='10' data-slider-prev='13' data-slider-next='14')
                   .swiper-wrapper 
                     - for (i = 0; i < 6; i++)
-                      .swiper-slide 
+                      .swiper-slide.publications-page__slider-slide
                         img.publications-page__slider-img(src="assets/images/publication-2.jpg", alt="")
               .publications-page__section-buttons
                 +slider-buttons.slider-buttons--small.slider-buttons--wide(prev = '13' next = '14')
