--- a/src/assets/styles/modules/header.scss
+++ b/src/assets/styles/modules/header.scss
@@ -100,7 +100,6 @@
 
   &__svg {
     transform: perspective(1px) translateZ(0);
-
     @media (max-width: ($breakpoint - 1px)) {
       width: 73px;
       height: 30px;
@@ -172,6 +171,12 @@
 
     &:nth-child(3) {
       padding-left: 60px;
+      @media (max-width: ($breakpoint-xl - 1px)) {
+        padding-left: 30px;
+      }
+      @media (max-width: ($breakpoint-ll - 1px)) {
+        padding-left: 20px;
+      }
       justify-content: flex-end;
     }
   }
@@ -223,6 +228,9 @@
 
   &__accordion-text {
     @include fsl(18px, 140%);
+    @media (max-width: ($breakpoint-xl - 1px)) {
+      @include fsl(16px);
+    }
     transition: $transition;
   }
 
@@ -248,6 +256,8 @@
   }
 
   &__nav-item {
+    display: flex;
+    align-items: center;
 
     &:not(:first-child) {
       margin-left: 32px;
@@ -264,6 +274,9 @@
 
   &__nav-link {
     @include fsl(14px, 140%);
+    @media (max-width: ($breakpoint-xl - 1px)) {
+      @include fsl(12px);
+    }
     transition: $transition;
 
     &:hover {
@@ -306,6 +319,9 @@
 
   &__nav-text {
     @include fsl(14px, 140%);
+    @media (max-width: ($breakpoint-xl - 1px)) {
+      @include fsl(12px);
+    }
     transition: $transition;
   }
 
@@ -337,6 +353,9 @@
 
     @media (max-width: ($breakpoint-xl - 1px)) {
       padding-left: 25px;
+    }
+    @media (max-width: ($breakpoint-ll - 1px)) {
+      padding-left: 15px;
     }
 
     width: 100%;
@@ -379,6 +398,9 @@
   }
 
   &__search-svg {
+    @media (max-width: ($breakpoint-xl - 1px)) {
+      width: 25px;
+    }
     @media (max-width: ($breakpoint - 1px)) {
       width: 24px;
       height: 25px;
@@ -435,6 +457,9 @@
   }
 
   &__cart-svg {
+    @media (max-width: ($breakpoint-xl - 1px)) {
+      width: 33px;
+    }
     @media (max-width: ($breakpoint - 1px)) {
       width: 32px;
       height: 30px;
@@ -479,6 +504,9 @@
     position: relative;
     z-index: 0;
     margin-left: 20px;
+    @media (max-width: ($breakpoint-ll - 1px)) {
+      margin-left: 10px;
+    }
 
     &:hover {
       #{$comp}__user-svg {
@@ -512,6 +540,12 @@
         color: $color-blue;
         border-color: $color-blue;
       }
+    }
+  }
+
+  &__user-svg {
+    @media (max-width: ($breakpoint-xl - 1px)) {
+      width: 25px;
     }
   }
 
