--- a/src/assets/styles/modules/equip-card.scss
+++ b/src/assets/styles/modules/equip-card.scss
@@ -62,6 +62,12 @@
     #{$comp}__text {
       color: $color-gray;
     }
+
+    &:hover {
+      #{$comp}__title {
+        color: $color-black;
+      }
+    }
   }
 
   &__image {
