--- a/src/views/pages/equip-cat-1.pug
+++ b/src/views/pages/equip-cat-1.pug
@@ -69,4 +69,4 @@ block content
             |Возможные опции
         .equip-page__grid.equip-page__grid--alt.margin-top.margin-top--md 
           each item in ddata
-            +equip-card.equip-card--sm( text = item.text title = item.title img = 'assets/images/equip/equip-card-10.jpg')
+            +equip-card.equip-card--sm( text = item.text title = item.title img = 'assets/images/equip/equip-card-10.jpg' static = true)
