--- a/src/views/components/svg.pug
+++ b/src/views/components/svg.pug
@@ -390,3 +390,7 @@ mixin call-svg
 mixin circle-svg 
   svg(class=attributes.class width='8' height='8' viewbox='0 0 8 8' fill='none' xmlns='http://www.w3.org/2000/svg')
     rect(width='8' height='8' rx='4' fill='#2447ED')
+
+mixin blue-arrow-svg 
+  svg(class=attributes.class width='18' height='17' viewbox='0 0 18 17' fill='none' xmlns='http://www.w3.org/2000/svg')
+    path(fill-rule='evenodd' clip-rule='evenodd' d='M0.333496 7.66676L14.6853 7.66676L10.4519 3.57235L10.4519 4.89976L9.11857 4.89976L9.11857 0.427848L17.2924 8.33343L9.11857 16.239L9.11857 11.7671L10.4519 11.7671L10.4519 13.0945L14.6853 9.0001L0.333496 9.0001L0.333496 7.66676Z' fill='#2447ED')
