--- a/src/assets/styles/modules/header.scss
+++ b/src/assets/styles/modules/header.scss
@@ -7,6 +7,8 @@
   left: 0;
   right: 0;
 
+  min-width: 100vw;
+
   // background: $color-white;
   transition: $transition;
   @media print {
@@ -64,7 +66,7 @@
   }
 
   &__inner {
-    padding: 20px 20px 0;
+    padding: 20px 30px 0 20px;
 
     @media (max-width: ($breakpoint - 1px)) {
       padding: 8px 16px;
