--- a/src/assets/styles/modules/section.scss
+++ b/src/assets/styles/modules/section.scss
@@ -42,10 +42,11 @@
   }
 
   &--table {
-    margin-top: 0;
-    padding-bottom: 100px;
+    margin-top: 32px;
+    padding: 0 0 100px;
     @media (max-width: ($breakpoint - 1px)) {
-      padding-bottom: 60px;
+      margin-top: 20px;
+      padding: 0 0 60px;
     }
   }
 
