--- a/src/assets/styles/modules/form.scss
+++ b/src/assets/styles/modules/form.scss
@@ -63,6 +63,11 @@
     &--sm {
       padding: 9px 16px;
     }
+
+    &.disabled {
+      opacity: 0.4;
+      pointer-events: none;
+    }
   }
   
   &__textarea {
