Update docs page

--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -28,7 +28,7 @@ html(lang='en')
 
   block vars
 
-  body.body
+  body.body.no-transition
     +grid-test
 
     .wrapper(class=[isVisible ? "wrapper--visible" : ""])
