--- a/src/assets/styles/base/base.scss
+++ b/src/assets/styles/base/base.scss
@@ -31,6 +31,17 @@ body {
   background: $color-darken-white;
 }
 
+.no-transition {
+  &,
+  * {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    -ms-transition: none !important;
+    -o-transition: none !important;
+    transition: none !important;
+  }
+}
+
 img {
   max-width: 100%;
   max-height: 100%;
