--- a/src/assets/styles/modules/select.scss
+++ b/src/assets/styles/modules/select.scss
@@ -25,7 +25,7 @@
 
     &.select2-container--open {
       .select2-selection {
-        border-bottom: 0;
+        // border-bottom: 0;
         border-color: $color-blue;
 
         &__arrow {
