--- a/src/assets/styles/pages/docs-page.scss
+++ b/src/assets/styles/pages/docs-page.scss
@@ -13,10 +13,10 @@
 
     &:nth-child(2) {
       flex-shrink: 0;
-      width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
+      // width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
       @media (max-width: ($breakpoint - 1px)) {
         margin-top: 16px;
-        width: 100%;
+        // width: 100%;
       }
     }
   }
@@ -64,5 +64,14 @@
         margin-top: 8px;
       }
     }
+  }
+
+  &__empty {
+    margin: 211px 0 199px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin: 100px 0;
+    }
+
+    text-align: center;
   }
 }
